Fixed viewport scrollbar issue introduced when I unhid (but set to opaque) camera and canvas for safari.

--- a/src/App.css
+++ b/src/App.css
@@ -36,9 +36,13 @@
 }
 
 .center-wrapper {
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
+  max-width: 100vw;
+  overflow-x: hidden;
+  max-height: 100vh;
+  overflow-y: hidden;
   transform: translate(-50%, -50%);
 }
 
